[package]
name = "zero2prod"
version = "0.1.0"
authors = ["agris 7924@inbox.lv"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.11.0"
actix-web = "4.2.1"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"]}

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
