[package]
name = "zero2prod"
version = "0.1.0"
authors = ["agris 7924@inbox.lv"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13.3"
actix-web = "4.2.1"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"]}
uuid = { version = "1.2.2", features = ["v4"]}
chrono = "0.4.15"
rand = "0.8.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing = { version = "0.1.37", features = ["log"]}
secrecy = { version = "0.8", features = ["serde"]}
tracing-actix-web = "0.5"
serde-aux = "3"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate",
    "uuid",
    "offline"
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
